# nosco

./: Cargo.toml  README.md  deny.toml  typos.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/nosco-cli/: Cargo.toml  README.md
crates/nosco-cli/src/: cli.rs  config.rs  lib.rs  main.rs  run.rs  tracer.rs
crates/nosco-cli/src/dump/: binary_info.rs  call_info.rs  call_trace.rs  exec_trace.rs  mod.rs  thread_info.rs
crates/nosco-debugger/: Cargo.toml  README.md
crates/nosco-debugger/src/: error.rs  lib.rs
crates/nosco-debugger/src/common/: binary.rs  breakpoint.rs  debugger.rs  mod.rs  session.rs  thread.rs
crates/nosco-debugger/src/sys/: mod.rs
crates/nosco-debugger/src/sys/linux/: binary.rs  error.rs  mapped_elf.rs  mem.rs  mod.rs  process.rs  thread.rs
crates/nosco-debugger/src/sys/linux/session/: auxv.rs  elf.rs  mod.rs  rdebug.rs  watchpoint.rs
crates/nosco-storage/: Cargo.toml
crates/nosco-storage/src/: error.rs  lib.rs  writer.rs
crates/nosco-storage/src/mla/: content.rs  mod.rs  reader.rs  writer.rs
crates/nosco-symbol/: Cargo.toml
crates/nosco-symbol/src/: elf.rs  error.rs  lib.rs
crates/nosco-tracer/: Cargo.toml  README.md
crates/nosco-tracer/src/: command.rs  error.rs  lib.rs
crates/nosco-tracer/src/debugger/: binary.rs  mod.rs  thread.rs
crates/nosco-tracer/src/handler/: mod.rs
crates/nosco-tracer/src/tracer/: builder.rs  mod.rs  opcode.rs  state.rs  tracee.rs
crates/nosco-tracer/tests/: tracer.rs
crates/nosco-tracer/tests/common/: handler.rs  mod.rs
crates/nosco-tracer/tests/common/yaml/: error.rs  mod.rs  parser.rs  stream.rs
crates/nosco-tracer/tests/linux/: backtrace.asm  backtrace.kdl  backtrace.s  dlopen.32.asm  dlopen.32.kdl  dlopen.32.static.kdl  dlopen.32.static.yml  dlopen.32.yml  dlopen.64.asm  dlopen.64.kdl  dlopen.64.static.kdl  dlopen.64.static.yml  dlopen.64.yml  execve.c  execve.kdl  hello.32.asm  hello.32.kdl  hello.32.static.kdl  hello.32.static.yml  hello.32.yml  hello.64.asm  hello.64.kdl  hello.64.static.kdl  hello.64.static.yml  hello.64.yml  mod.rs  multithreading.32.kdl  multithreading.32.s  multithreading.64.kdl  multithreading.64.s  recursive_ret_breakpoint.asm  recursive_ret_breakpoint.kdl  recursive_ret_breakpoint.yml  utils.rs
