[workspace]
members = ["crates/nosco-*"]
resolver = "2"

[workspace.package]
version = "0.0.0-reserved"
rust-version = "1.82.0"
authors = ["James Smith <jamesmth@proton.me>"]
categories = ["development-tools::debugging"]
edition = "2021"
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/jamesmth/nosco"

[workspace.dependencies]
nosco-debugger = { path = "crates/nosco-debugger" }
nosco-tracer = { path = "crates/nosco-tracer" }

byteorder = "1.5.0"
capstone = { version = "0.12.0", features = ["full"] }
futures-util = { version = "0.3.31", default-features = false }
goblin = { version = "0.9.3", default-features = false }
indexmap = "2.7.1"
indoc = "2.0.5"
libyml = "0.0.5"
nasm-rs = "0.3.0"
nix = { version = "0.29.0" }
regex = "1.11.1"
scroll = "0.12.0"
serde_yml = "0.0.12"
thiserror = "2.0.11"
tempfile = "3.15.0"
test-log = { version = "0.2.17", default-features = false, features = ["color", "trace"] }
tokio = "1.43.0"
tokio-stream = { version = "0.1.17" }
tokio-util = { version = "0.7.13" }
tracing = "0.1.41"
wholesym = "0.7.0"

[profile.release]
lto = true
codegen-units = 1

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unwrap_used = "deny"
