[package]
name = "nosco-storage"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
bincode = "1.3.3"
either = "1.15.0"
mla = { workspace = true, features = ["send"] }
serde = { version = "1.0.218", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread"] }

[lints]
workspace = true
