[package]
name = "nosco-tracer"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
nosco-debugger = { workspace = true }

capstone = { workspace = true }
indoc = { workspace = true }
libyaml-safer = { workspace = true }
nasm-rs = { workspace = true }
ouroboros = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
test-log = { workspace = true }
tokio = { workspace = true, features = ["macros", "process", "rt-multi-thread"] }

[lints]
workspace = true
